<resources>
    <string name="app_name">云警务</string>

    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登  录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱格式不正确</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">必填</string>

    <string name="Complete">成功</string>
    <string name="Upload">登录</string>
    <string name="Error">失败</string>
    <string name="title_activity_main">CloudPolice智能云警务</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="nav_user_name">username</string>
    <string name="nav_user_email">user@email.com</string>
    <string name="nav_attention">attention</string>
    <string name="nav_gather">gather</string>
    <string name="nav_message">message</string>
    <string name="nav_friends">friend</string>
    <string name="nav_used_scan">scan</string>
</resources>
