<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.cybertech.police.module.login.LoginActivity"
    android:background="@drawable/login_bg"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"  >

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_centerInParent="true"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="lanccj" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.13">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="1234567"/>

            </android.support.design.widget.TextInputLayout>

            <com.dd.CircularProgressButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/cpb_white"
                android:textSize="18sp"
                app:cpb_textComplete="@string/Complete"
                app:cpb_textError="@string/Error"
                app:cpb_textIdle="@string/Upload"
                android:layout_marginTop="16dp" />
        </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:layout_marginBottom="62dp"
        android:id="@+id/imageView"
        android:layout_above="@+id/login_form"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Copyright ©2016  Powered By LancCJ Version 1.0.0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CopyRight"
        android:textColor="@color/cpb_white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
